--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "husky": "^4.3.8",
-    "jest": "^27.3.1",
-    "pre-commit": "^1.2.2"
+    "jest": "^27.3.1"
   },
-  "pre-commit": [ "test"]
+  "husky": {
+    "hooks" : { 
+       "pre-commit": "npm test"
+    }
+  }
 }
+    
+  
