--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/**"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.25.3",
     "husky": "^4.3.8",
     "jest": "^27.3.1"
   },
   "husky": {
-    "hooks" : { 
-       "pre-commit": "npm test"
+    "hooks": {
+      "pre-commit": "npm test"
     }
   }
 }
-    
-  
