--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint src/**"
+    "lint": "eslint src/**",
+    "lint-fix": "eslint src/** --fix"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test"
+      "pre-commit": "npm run lint-fix && npm run lint && npm test"
     }
   }
 }
