--- a/package.json
+++ b/package.json
@@ -6,22 +6,46 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint src/**",
-    "lint-fix": "eslint src/** --fix"
+    "lint-fix": "eslint src/** --fix",
+    "success-message": "echo Thanks for committing $GIT_AUTHOR_NAME"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^14.1.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.3",
     "husky": "^4.3.8",
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.6"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint-fix && npm run lint && npm test"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "post-commit": "npm run success-message"
+    } 
+  },
+    "lint-staged": {
+      "*.js": [
+        "eslint",
+        "jest --findRelatedTests"
+      ]
+    },
+    
+    "commitlint": {
+      "rules": {
+        "references-empty": [2, "never"]
+      },
+      "parserPreset": {
+        "parserOpts": {
+          "issuePrefixes": ["ISSUE-"]
+        }
+      }
     }
+     
   }
-}
+
